# src/controllers/auth.js
@@ -1,8 +1,9 @@
-import { registerUser } from '../services/auth.js';
+import { loginOrSignupWithGoogle, registerUser } from '../services/auth.js';
 import { loginUser } from '../services/auth.js';
 import { THIRTY_DAYS } from '../constants/index.js';
 import { logoutUser } from '../services/auth.js';
 import { refreshUsersSession } from '../services/auth.js';
+import { generateAuthUrl } from '../utils/googleOauth2.js';
 
 export const registerUserController = async (req, res) => {
   const user = await registerUser(req.body);
@@ -80,6 +81,30 @@ export const refreshUsersSessionController = async (req, res) => {
   res.json({
     status: 200,
     message: 'Session refreshed successfully!',
+    data: {
+      accessToken: session.accessToken,
+    },
+  });
+};
+
+export const getGoogleOAuthUrlController = async (req, res) => {
+  const url = generateAuthUrl();
+  res.json({
+    status: 200,
+    message: 'Successfully get Google OAuth url!',
+    data: {
+      url,
+    },
+  });
+};
+
+export const loginWithGoogleController = async (req, res) => {
+  const session = await loginOrSignupWithGoogle(req.body.code);
+  setupSession(res, session);
+
+  res.json({
+    status: 200,
+    message: 'Successfully logged in via Google OAuth!',
     data: {
       accessToken: session.accessToken,
     },
